It only get's more stylish!

--- a/yaun/yaun_site/feed_notify/templates/feed_notify/index.html
+++ b/yaun/yaun_site/feed_notify/templates/feed_notify/index.html
@@ -10,7 +10,6 @@
         <div class="sidebar">
             <nav>
                 <h1>YAUN</h1>
-                <a href="#">XX</a>
             </nav>
             <div class="sourcecontainer">
                 <div class="sourceheader">
@@ -85,6 +84,7 @@
                     </li>
                 {% endfor %}
                 </ul>
+                <span>That's all!</span>
             {% else %}
                 <span>No updates found</span>
             {% endif %}
