--- a/yaun/yaun_site/feed_notify/static/feed_notify/default.css
+++ b/yaun/yaun_site/feed_notify/static/feed_notify/default.css
@@ -6,7 +6,7 @@ h2 {
 
 }
 h3 {
-    margin: 0;
+    font-weight: normal;
 }
 
 ul {
@@ -16,28 +16,33 @@ ul {
 .sidebar {
     float: left;
     width: 300px;
-    max-height: 100vh;
+    height: 100vh;
+    border-right: 1px solid #ccc;
     overflow-y: hidden;
 
 }
 nav {
     padding: 1rem;
 }
+h1 {
+    margin: 0;
+}
 .sourcecontainer {
-    position: relative;
+    height: 100%;
+
 }
 .sourcecontainer h2 {
-
+    font-size: 1rem;
 }
 .sourceheader {
     padding-left: 1rem;
-
+    border-bottom: 1px solid #ccc;
 
 }
 .sources {
-    max-height: calc(100% - 48px);
+    height: calc(100% - 189px);
     overflow-y: scroll;
-
+    margin: 0;
 }
 .sources li {
     margin: 0;
@@ -49,6 +54,13 @@ nav {
     opacity: .7;
 
 }
+.sources h3 {
+    margin: 0;
+}
+.sources a {
+    text-decoration: none;
+    font-size: .75rem;
+}
 .sources li:not(.active):hover {
     border-left: solid 4px #ccc;
     margin-left: 0;
@@ -58,6 +70,7 @@ nav {
     border-left: solid 4px #44f;
     margin-left: 0;
     opacity: 1;
+    background-color: #fafafa;
 }
 .addSourcesContainer {
     position: fixed;
@@ -70,13 +83,13 @@ nav {
 .linkscontainer {
     /*margin-left: 300px;*/
     float: left;
-    height: 100vw;
+    height: 100vh;
     overflow-y: scroll;
     box-sizing: border-box;
-    width: calc(100vw - 300px);
-    border-left: 1px solid #ccc;
+    width: calc(100vw - 301px);
+
     padding: 1rem 2rem;
-    max-height: 100vh;
+
 
 }
 .links li {
